# ugdk-sdlmixer

./: CMakeLists.txt
WindowsUWP/: SDL_mixer-UWP.vcxproj  libogg_dynamic-UWP.vcxproj  libogg_static-UWP.vcxproj  libvorbis_dynamic-UWP.vcxproj  libvorbis_static-UWP.vcxproj  libvorbisfile_dynamic-UWP.vcxproj  libvorbisfile_static-UWP.vcxproj
